@@ -1,3 +1,9 @@
+2008-10-24  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* src/plugins/youtube/youtube.py: Update the YouTube URL resolution
+	code to work with Google's latest updates to YouTube.
+	(Closes: #557681)
+
 2008-10-24  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem.c (seek_slider_pressed_cb), (seek_slider_released_cb):
